# Robotics

ex01/: commands.txt
modul1/ex01/: commands.txt
modul2/ex01/: .bashrc  ex01.txt
modul2/ex02/: package_path_ros2topic.txt
modul2/ex03/install/: local_setup.sh  setup.sh
modul2/ex03/log/: latest_build
modul2/ex03/src/natalia_pkg/: CMakeLists.txt
modul2/ex04/: colcon_build.txt
modul2/ex05/: rosnode_info.txt  rosnode_list.txt
modul2/ex06/: cmd_vel.txt
modul2/ex08/: rqt_console.csv
modul2/ex08/launch/: turtlesim_mimic_launch.py
modul2/ex09/full_name_message/: CMakeLists.txt  package.xml
modul2/ex09/full_name_message/install/: local_setup.sh  setup.sh
modul2/ex09/full_name_message/log/: latest_build
modul2/ex09/install/: local_setup.sh  setup.sh
modul2/ex09/log/: latest_build
modul2/ex10/: package.xml  setup.py
modul2/ex10/install/: local_setup.sh  setup.sh
modul2/ex10/log/: latest_build
modul2/ex10/text_to_cmd_vel/: text_to_cmd_vel_node.py
modul3/ex01/: CMakeList.txt  setup.py
modul3/ex01/install/: local_setup.sh  setup.sh
modul3/ex01/log/: latest_build
modul3/ex01/service_full_name/: CMakeLists.txt
modul3/ex01/service_full_name/service_full_name/: service_node.py
modul3/ex02/: pose_speed_x2.yaml
modul3/ex02/bag_files/my_turtlesim_data/: metadata.yaml  my_turtlesim_data_0.mcap
modul3/ex02/bag_files/turtle_cmd_vel/: metadata.yaml  turtle_cmd_vel_0.mcap
modul3/ex03/: doctor.txt
modul3/ex04/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
modul3/ex04/install/move_to_goal/share/move_to_goal/: package.sh  package.xml
modul3/ex04/log/: latest_build
modul3/ex04/move_to_goal/: package.xml  setup.py
modul3/ex04/move_to_goal/move_to_goal/: move_to_goal_node.py
modul3/ex05/: cleaning_action_client.py  cleaning_action_server.py
modul3/ex05/action_cleaning_robot/: CMakeLists.txt  setup.py
modul3/ex05/action_cleaning_robot/action_cleaning_robot/: CMakeLists.txt  cleaning_action_client.py  cleaning_action_server.py
modul3/ex05/install/: local_setup.sh  setup.sh
modul3/ex05/log/: latest_build
modul4/ex01/: last_transform.txt  transform.txt
modul4/ex02/: frames_2025-11-05_23.47.12.gv  frames_2025-11-05_23.54.06.gv  frames_2025-11-06_00.13.04.gv
modul4/ex02/EXAMPLE/: frames_2025-11-04_21.10.36.gv
modul4/ex02/EXAMPLE/install/: setup.sh
modul4/ex02/EXAMPLE/learning_tf2_py/: package.xml  setup.py
modul4/ex02/EXAMPLE/log/: latest_build
modul4/ex02/install/: local_setup.sh
modul4/ex02/log/: latest_build
modul4/ex02/mycarrot/: setup.py
modul4/ex02/mycarrot/launch/: turtle_tf2_launch.py
modul4/ex02/mycarrot/mycarrot/: carrot_tf2_broadcaster.py  turtle3_tf2_listener.py
modul4/ex02b/mycarrot/: frames_2025-11-11_13.59.30.gv  frames_2025-11-11_14.10.23.gv  frames_2025-11-11_14.14.56.gv  frames_2025-11-11_14.16.49.gv  frames_2025-11-11_18.52.42.gv  frames_2025-11-11_19.04.27.gv  setup.cfg  setup.py
modul4/ex02b/mycarrot/install/: local_setup.sh  setup.sh
modul4/ex02b/mycarrot/launch/: turtle_tf2_launch.py
modul4/ex02b/mycarrot/log/: latest_build
modul4/ex02b/mycarrot/mycarrot/: keyboard_input.py  turtle_controller.py  turtle_tf2_broadcaster.py
modul4/ex03/install/: local_setup.sh  setup.sh
modul4/ex03/log/: latest_build
modul4/ex03/mycarrot/: setup.py
modul4/ex03/mycarrot/launch/: turtle_tf2_launch.py
modul5/ex01/install/: local_setup.sh  setup.sh
modul5/ex01/log/: latest_build
modul5/ex01/sam_bot_description/: CMakeLists.txt
modul5/ex02/install/: local_setup.sh  setup.sh
modul5/ex02/log/: latest_build
modul5/ex03/install/: local_setup.sh  setup.sh
modul5/ex03/log/: latest_build
modul5/ex03/sam_bot_description/: CMakeLists.txt  package.xml
modul5/ex03/sam_bot_description/world/: empty
modul5/ex0302/: frames_2025-11-25_21.05.20.gv
modul5/ex0302/install/: local_setup.sh  setup.sh
modul5/ex0302/log/: latest_build
modul5/ex04/install/: local_setup.sh  setup.sh
modul5/ex04/log/: latest_build
modul5/ex05/: frames_2025-11-26_18.44.45.gv
modul5/ex05/install/: local_setup.sh  setup.sh
modul5/ex05/log/: latest_build
modul6 (Копия)/ex01/install/: local_setup.sh
modul6 (Копия)/ex01/log/: latest_build
modul6 (Копия)/ex02/install/: setup.sh
modul6 (Копия)/ex04/install/: local_setup.sh
modul6 (Копия)/ex05/install/: local_setup.sh  setup.sh
modul6 (Копия)/ex05/log/: latest_build
modul6 (Копия)/ex05/robot_bringup/: CMakeLists.txt
modul6 (Копия)/ex05/robot_bringup/launch/: straight_line.launch.py
modul6 (Копия)/ex05/robot_bringup/scripts/: simple_stop.py
modul6/ex01/: frames_2025-12-02_13.06.47.gv  frames_2025-12-02_13.08.15.gv
modul6/ex01/install/: setup.sh
modul6/ex01/log/: latest_build
modul6/ex02/install/: local_setup.sh
modul6/ex02/log/: latest_build
modul6/ex03/install/: local_setup.sh  setup.sh
modul6/ex03/log/: latest_build
modul6/ex04/install/: setup.sh
modul6/ex04/log/: latest_build
modul6/ex04/ros_gz_project_template/ros_gz_example_bringup/: CMakeLists.txt
modul6/ex04/ros_gz_project_template/ros_gz_example_bringup/scripts/: obstacle_avoidance_node.py
(+227 files in other folders)
